WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131183
REGRESSION: fast/css/relative-positioned-block-nested-with-inline-parent-multiple-descendant-blocks-dynamic.html broken
https://bugs.webkit.org/show_bug.cgi?id=131183
Summary
REGRESSION: fast/css/relative-positioned-block-nested-with-inline-parent-mult...
Dave Hyatt
Reported
2014-04-03 14:36:53 PDT
fast/css/relative-positioned-block-nested-with-inline-parent-multiple-descendant-blocks-dynamic.html was broken by my previous change.
Attachments
Patch
(1.76 KB, patch)
2014-04-03 14:38 PDT
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-04-03 14:38:54 PDT
Created
attachment 228544
[details]
Patch Fix bug.
Dave Hyatt
Comment 2
2014-04-03 14:41:32 PDT
Fixed in
r166745
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug